--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -9,7 +9,6 @@
 }
 .cell-1 .sldier-text {
   position: relative;
-  z-index: 4;
 }
 .cell-1 .sldier-text h1 {
   animation: fade-in ease-in-out 2s 0.5s both;
